[package]
name = "ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.10.1"
# clap = { version = "3.0", features = ["derive"] }
# shrust = "0.0.7"
byteorder = "1.4.3"
rand = "0.8.4"
rustyline = "9.1.0"
dashmap = "5.2.0"
bimap = "0.6.2"
# concurrent-queue = "1.2.2"
# threadpool = "1.8.1"
rb = "0.4.0"
snafu = "0.7.0"
